# CivilEngineer

./: CLAUDE.md  README.md  docker-compose.yml  first-draft.md
backend/: .env  .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250219_001_initial_schema.py  20260222_002_decision_tracking.py  20260224_003_finalized_status.py  20260224_004_client_approvals.py  20260224_005_extraction_verification.py
backend/output/: test_building_3d.dxf  test_elevation_front.dxf  test_elevation_left.dxf  test_elevation_rear.dxf  test_elevation_right.dxf  test_floor_plan_F1.dxf  test_floor_plan_F2.dxf
backend/scripts/: index_knowledge.py  seed_db.py  seed_jurisdiction_rules.py  test_cad.py
backend/src/civilengineer/agent/: graph.py  session_store.py  state.py
backend/src/civilengineer/api/: app.py  websocket.py
backend/src/civilengineer/auth/: dependencies.py  jwt.py  password.py  rbac.py  redis_client.py
backend/src/civilengineer/autocad_layer/: com_driver.py  layer_manager.py  transaction_manager.py
backend/src/civilengineer/cad_layer/: ezdxf_driver.py  layer_manager.py  oda_converter.py
backend/src/civilengineer/cli/: design_commands.py  main.py
backend/src/civilengineer/core/: config.py
backend/src/civilengineer/db/: models.py  session.py
backend/src/civilengineer/elevation_engine/: building_3d.py  elevation_generator.py
backend/src/civilengineer/geometry_engine/: layout_generator.py  wall_builder.py
backend/src/civilengineer/gis/: __init__.py  jurisdiction_map.py  nominatim.py
backend/src/civilengineer/input_layer/: enricher.py  validator.py
backend/src/civilengineer/jobs/: celery_app.py  code_extraction_job.py  design_job.py  plot_job.py
backend/src/civilengineer/knowledge/: indexer.py  retriever.py  rule_compiler.py  setback_db.py
backend/src/civilengineer/schemas/: auth.py  (+7 more)
backend/tests/: conftest.py
backend/tests/integration/: test_admin_building_codes.py  test_api_auth.py
backend/tests/unit/: test_agent_graph.py  test_client_approval.py  test_code_extraction_job.py  test_column_alignment.py  test_constraint_solver.py  test_cost_estimator.py  test_decision_repository.py  test_finish_schema.py  test_gis_resolver.py  test_jurisdiction_india.py  test_mep_router.py  test_phase8.py  test_phase9.py  test_plot_analyzer.py  test_rule_engine.py  test_rule_repository.py  test_staircase_sizing.py  test_verification_layer.py  test_wall_cross_floor.py
(+111 files in other folders)
